# SecureFlashing

./: .gitignore  LICENSE  README.md  UserInfo.md  launch.bat  pyproject.toml  requirements.txt
api/: main.py  websocket.py
api/routers/: auth.py  diagnostics.py  flashing.py  test_scenarios.py
docs/: index.html  secure_flashing_classic_monitor.html
sim/: bootloader.py  config.py  cryif.py  csm.py  dcm.py  dem.py  ecu_state.py  failure_handler.py  flash_manager.py  hsm.py  nvm.py  pki_manager.py  recovery_manager.py  security_access.py  session_manager.py  version_manager.py
tests/: conftest.py  test_vtc_01_auth_before_flash.py  test_vtc_02_auth_failure.py  test_vtc_03_replay_protection.py  test_vtc_04_valid_signature.py  test_vtc_05_invalid_signature.py  test_vtc_06_memory_boundary.py  test_vtc_07_incomplete_flash.py  test_vtc_08_power_loss_recovery.py  test_vtc_09_rollback_protection.py  test_vtc_10_secure_boot.py  test_vtc_11_hsm_failure.py  test_vtc_12_session_timeout.py  test_vtc_13_lockout.py  test_vtc_14_block_integrity.py  test_vtc_15_buffer_sanitization.py  test_vtc_16_pki_chain.py
