[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure_flashing_classic"
version = "1.0.0"
description = "AUTOSAR Classic Secure Flashing Simulation — Phase 1"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "cryptography==42.0.5",
    "pydantic==2.7.1",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "vtc: Verification Test Case identifier (e.g. VTC-01)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sim*", "api*"]
